--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -10,5 +10,8 @@
     console.log(obj);
 </script> -->
 <script src="js/ex1.js"></script>
+
+<script src="js/ex6.js"></script>
+
     </body>
 </html>
