--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> Шапочка сайта</title>
-    </head>
-    <body>
-        <div id="id_div">  Какой-то текст</div>
-<!-- <script>
-    let obj = document.getElementById('id_div');
-    console.log(obj);
-</script> -->
-<script src="js/ex1.js"></script>
 
-<script src="js/ex6.js"></script>
+<head>
+  <title> Шапочка сайта</title>
+</head>
 
-    </body>
+<body>
+  <div id="id_div"> Какой-то текст</div>
+
+  <!-- <script src="js/ex1.js"></script> -->
+  <!-- <script src="js/ex6.js"></script> -->
+  <!-- <script src="js/ex7.js"></script> -->
+  <script src="js/ex8.js"></script>
+
+</body>
+
 </html>
