--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -11,7 +11,8 @@
   <!-- <script src="js/ex1.js"></script> -->
   <!-- <script src="js/ex6.js"></script> -->
   <!-- <script src="js/ex7.js"></script> -->
-  <script src="js/ex8.js"></script>
+  <!-- <script src="js/ex8.js"></script> -->
+  <script src="js/ex9.js"></script>
 
 </body>
 
